# vshot

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  experiment.sh  requirements.txt  setup.cfg  setup.py
docker/: entrypoint.sh
lib/vshot/: screenshot.py  storage.py  vshot.py
