[aliases]
test=pytest

[tool:pytest]
env =
  SETTINGS_FILE_FOR_DYNACONF=app/settings.toml

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006,W503,E203

[isort]
profile=black
src_paths=['app', 'tests/units', 'lambda']
float_to_top=true
known_first_party=app
known_gumgum=konnector
sections=FUTURE,STDLIB,THIRDPARTY,GUMGUM,FIRSTPARTY,LOCALFOLDER

### Coverage settings (equivalent to .coveragerc)
[coverage:run]
# Only run coverage on our source code not on 3rd party libs
source = .
omit = .tox/*
       setup.py
       **conftest.py
branch = True
concurrency = multiprocessing
parallel = True
data_file = tests/results/coverage

[coverage:report]
# Fail if coverage is <70%
fail_under=70
